# connectors

./: .backportrc.json  .coveragerc  .gitignore  .isort.cfg  .ruff.toml  CHANGELOG.rst  CLAUDE.md  CONTRIBUTE.rst  Dockerfile  Dockerfile.agent  Dockerfile.fips  Dockerfile.ftest  Dockerfile.ftest.wolfi  Dockerfile.wolfi  MANIFEST.in  Makefile  NOTICE.txt  README.md  README.rst  SHAREPOINT.md  catalog-info.yaml  config.yml  config.yml.example  copier.yml  deps-licenses.md  dls.py  extract.py  hatch_build.py  install.py  my-changes.patch  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json  requirements.txt  script.py  setup.cfg  setup.py  test-requirements.txt  test_gitlab_connector.py  (+3 more)
app/connectors_service/: .ruff.toml  Dockerfile.agent  MANIFEST.in  Makefile  NOTICE.txt  README.md  __init__.py  build_info.py  config.yml.example  elastic-ingest  elastic-ingest.py  pyproject.toml  service_cli.py
app/connectors_service/cli/: auth.py
app/connectors_service/connectors/: VERSION  access_control.py  build_info.py  config.py  connectors_cli.py  fips.py  kibana.py  logger.py  preflight_check.py  service_cli.py  sync_job_runner.py  utils.py
app/connectors_service/connectors/agent/: config.py  connector_record_manager.py  logger.py  protocol.py  service_manager.py
app/connectors_service/connectors/cli/: README.md  connector.py  index.py
app/connectors_service/connectors/es/: cli_client.py  client.py  document.py  index.py  license.py  management_client.py  sink.py
app/connectors_service/connectors/protocol/: connectors.py
app/connectors_service/connectors/services/: access_control_sync_job_execution.py  base.py  job_cleanup.py  job_execution.py  job_scheduling.py
app/connectors_service/connectors/sources/: atlassian.py  azure_blob_storage.py  box.py  confluence.py  dropbox.py  github.py  google.py  google_drive.py  graphql.py  jira.py  microsoft_teams.py  mongo.py  mssql.py  mysql.py  network_drive.py  notion.py  onedrive.py  oracle.py  postgresql.py  redis.py  s3.py  salesforce.py  sandfly.py  servicenow.py  sharepoint_online.py  slack.py  zoom.py
app/connectors_service/connectors_service/: config.py  connectors_cli.py  kibana.py  preflight_check.py  service_cli.py  sync_job_runner.py
app/connectors_service/connectors_service/agent/: cli.py  component.py  config.py  connector_record_manager.py  protocol.py  service_manager.py
app/connectors_service/connectors_service/cli/: auth.py  connector.py  index.py  job.py
app/connectors_service/connectors_service/es/: __init__.py  cli_client.py  client.py  index.py  license.py  management_client.py  sink.py
app/connectors_service/connectors_service/protocol/: connectors.py
app/connectors_service/connectors_service/services/: __init__.py  access_control_sync_job_execution.py  base.py  content_sync_job_execution.py  job_cleanup.py  job_execution.py  job_scheduling.py
app/connectors_service/connectors_service/sources/: atlassian.py  box.py  confluence.py  directory.py  dropbox.py  generic_database.py  github.py  gmail.py  google.py  google_cloud_storage.py  google_drive.py  graphql.py  jira.py  microsoft_teams.py  mongo.py  mssql.py  mysql.py  network_drive.py  notion.py  onedrive.py  oracle.py  outlook.py  postgresql.py  redis.py  s3.py  salesforce.py  sandfly.py  servicenow.py  sharepoint_online.py  sharepoint_server.py  slack.py  zoom.py
app/connectors_service/entry/: connectors_cli.py  service_cli.py
app/connectors_service/scripts/: verify.py
app/connectors_service/scripts/stack/: README.md  configure-connectors.sh  copy-config.sh  run-stack.sh  update-kibana-user-password.sh  view-connectors-logs.sh  wait-for-elasticsearch.sh  wait-for-kibana.sh
app/connectors_service/scripts/testing/: README.md  cli.py  startup_scipt.sh
app/connectors_service/tests/: Dockerfile.fips-ftest  Dockerfile.ftest  commons.py  conftest.py  fake_sources.py  ftest.sh  test_access_control.py  test_commons.py  test_config.py  test_connectors_cli.py  test_fips.py  test_kibana.py  test_preflight_check.py  test_service_cli.py  test_sink.py  test_sync_job_runner.py  test_utils.py
app/connectors_service/tests/agent/: test_agent_config.py  test_cli.py  test_component.py  test_connector_record_manager.py  test_protocol.py  test_service_manager.py
app/connectors_service/tests/es/: test_cli_client.py  test_client.py  test_document.py  test_index.py  test_license.py  test_management_client.py
app/connectors_service/tests/filtering/: test_validation.py
app/connectors_service/tests/fixtures/: config_2.yml  config_https.yml  config_mem.yml  entsearch.yml  memconfig.yml
app/connectors_service/tests/protocol/: test_connectors.py
app/connectors_service/tests/services/: test_base.py  test_job_cleanup.py  test_job_execution.py  test_job_scheduling.py
app/connectors_service/tests/sources/: test_atlassian.py  test_azure_blob_storage.py  test_box.py  test_confluence.py  test_directory.py  test_dropbox.py  test_generic_database.py  test_github.py  test_gitlab.py  test_gmail.py  test_google.py  test_google_bigquery.py  test_google_cloud_storage.py  test_google_drive.py  test_graphql.py  test_jira.py  test_microsoft_teams.py  test_mongo.py  test_mssql.py  test_mysql.py  test_network_drive.py  test_notion.py  test_onedrive.py  test_oracle.py  test_outlook.py  test_postgresql.py  test_redis.py  (+8 more)
libs/connectors_plugin_example/: README.md  pyproject.toml
libs/connectors_plugin_example/connectors_plugin_example/: __init__.py  datasource.py
libs/connectors_sdk/: .gitignore  .ruff.toml  MANIFEST.in  Makefile  NOTICE.txt  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
libs/connectors_sdk/connectors_sdk/: cli.py  client.py  config.py  content_extraction.py  logger.py  retry.py  source.py  utils.py
libs/connectors_sdk/tests/: conftest.py  test_content_extraction.py  test_logger.py  test_source.py  test_utils.py
libs/connectors_sources/: Makefile  NOTICE.txt  pyproject.toml
libs/connectors_sources/connectors_sources/: utils.py
libs/connectors_sources/ftests/: ftest.sh
libs/connectors_sources/tests/: conftest.py  utils.py
(+1114 files in other folders)
