[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "elasticsearch-connectors"
description = "Elasticsearch Connectors"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Search Extract and Transform Team", email = "enterprise-search-ingestion-team@elastic.co" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "SQLAlchemy==2.0.1",
    "aioboto3==12.4.0",
    "aiofiles==23.2.1",
    "aiogoogle==5.3.0",
    "aiohttp==3.12.14",
    "aiomysql==0.1.1",
    "asyncpg==0.29.0",
    "azure-identity==1.19.0",
    "azure-storage-blob==12.19.1",
    "beautifulsoup4==4.12.2",
    "certifi==2024.7.4",
    "cffi==1.16.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "cron-schedule-triggers==0.0.11",
    "dropbox==11.36.2",
    "ecs-logging==2.0.0",
    "elastic-agent-client==0.0.1.dev2",
    "elastic-transport==8.17.1",
    "elasticsearch[async]==8.18.0",
    "envyaml==1.10.211231",
    "exchangelib==5.4.0",
    "fastjsonschema==2.16.2",
    "gidgethub==5.2.1",
    "graphql-core==3.2.3",
    "httpx-ntlm==1.4.0",
    "httpx==0.27.0",
    "ldap3==2.9.1",
    "lxml==4.9.3",
    "msal==1.30.0",
    "notion-client==2.2.1",
    "oracledb==2.3.0",
    "pip-licenses==5.0.0",
    "pymongo==4.6.3; platform_machine=='x86_64'",
    "pymongo[srv]==4.6.3; platform_machine=='aarch64' or platform_machine=='arm64'",
    "smbprotocol==1.10.1",
    "motor==3.4.0",
    "pyOpenSSL==24.3.0",
    "pyasn1<0.6.1",
    "pympler==1.0.1",
    "python-dateutil==2.8.2",
    "python-tds==1.12.0",
    "pytz==2019.3",
    "pywinrm==0.4.3",
    "pyyaml==6.0.1",
    "redis==5.0.1",
    "requests==2.32.4",
    "simple-term-menu==1.6.4",
    "sqlalchemy-pytds==0.3.5",
    "SQLAlchemy[asyncio]==2.0.1; platform_machine=='arm64'",
    "tabulate==0.9.0",
    "tzcron==1.0.0",
    "uvloop==0.20.0; sys_platform != 'win32'",
    "wcmatch==8.4.1",
    "elasticsearch-connectors-sdk",
    "elasticsearch-connectors-sources",
]

[project.optional-dependencies]
tests = [
    "aioresponses==0.7.6",
    "faker==18.11.2",
    "freezegun==1.2.2",
    "ruff==0.6.3",
    "perf8@git+https://github.com/elastic/perf8#egg=perf8",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.11.1",
    "pytest-randomly==3.13.0",
    "pytest-fail-slow==0.3.0",
    "pyright==1.1.317",
    "requests==2.32.4",
]

ftest= [
    "asyncpg==0.29.0",
    "boto3==1.34.69",
    "faker==18.11.2",
    "flask==2.3.2",
    "flask_limiter==3.3.1",
    "google-auth==2.40.3",
    "google-cloud-storage==2.10.0",
    "mysql-connector-python==9.0.0",
    "oracledb==2.3.0",
    "smbprotocol==1.10.1",
    "yattag==1.16.0",
]

[project.entry-points."connectors_service.external_sources"]

[project.scripts]
elastic-ingest = "connectors.service_cli:main"
fake-kibana = "connectors.kibana:main"
connectors = "connectors.connectors_cli:main"
elastic-agent-connectors = "connectors.agent.cli:main"
test-connectors = "scripts.testing.cli:main"

[tool.setuptools]
packages = ["connectors", "scripts"]

[tool.setuptools.dynamic]
version = {file = "connectors/VERSION"}
